prod/monitoring/prometheus-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: monitoring-basic-auth
spec:
  rules:
  - host: grafana.tmate.io
    http:
      paths:
      - backend:
          serviceName: mon-grafana
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: monitoring-basic-auth
spec:
  rules:
  - host: prometheus.tmate.io
    http:
      paths:
      - backend:
          serviceName: mon-prometheus
          servicePort: 9090
